El que dice footertiene la pagina mas avanzada

--- a/footer/footer.html
+++ b/footer/footer.html
@@ -9,6 +9,141 @@
     <title>Simple footer design</title>
 </head>
 <body>
+    <header>
+        <h1>Mi top 10 animes</h1>
+    </header>
+    <section>
+        <h3>Hunter x Hunter</h3>
+        <div class="foto-video">
+            <div class="foto">
+               <img src="fotos/hunter-x-hunter-2011-5b06b0fe6b483.jpg" alt="">
+            </div>
+            <iframe src="https://www.youtube.com/watch?v=d6kBeJjTGnY" frameborder="0"></iframe>
+        </div>
+        <article>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus esse blanditiis nesciunt delectus rerum aspernatur voluptate eveniet incidunt. Corporis cum veritatis aliquam sunt ipsam inventore rem, suscipit blanditiis aliquid nostrum!</p>
+        </article>
+    </section>
+    <section>
+        <h3>Hunter x Hunter</h3>
+        <div class="foto-video">
+            <div class="foto">
+               <img src="fotos/hunter-x-hunter-2011-5b06b0fe6b483.jpg" alt="">
+            </div>
+            <iframe src="https://www.youtube.com/watch?v=d6kBeJjTGnY" frameborder="0"></iframe>
+        </div>
+        <article>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus esse blanditiis nesciunt delectus rerum aspernatur voluptate eveniet incidunt. Corporis cum veritatis aliquam sunt ipsam inventore rem, suscipit blanditiis aliquid nostrum!</p>
+        </article>
+    </section>
+    <section>
+        <h3>Hunter x Hunter</h3>
+        <div class="foto-video">
+            <div class="foto">
+               <img src="fotos/hunter-x-hunter-2011-5b06b0fe6b483.jpg" alt="">
+            </div>
+            <iframe src="https://www.youtube.com/watch?v=d6kBeJjTGnY" frameborder="0"></iframe>
+        </div>
+        <article>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus esse blanditiis nesciunt delectus rerum aspernatur voluptate eveniet incidunt. Corporis cum veritatis aliquam sunt ipsam inventore rem, suscipit blanditiis aliquid nostrum!</p>
+        </article>
+    </section>
+    <section>
+        <h3>Hunter x Hunter</h3>
+        <div class="foto-video">
+            <div class="foto">
+               <img src="fotos/hunter-x-hunter-2011-5b06b0fe6b483.jpg" alt="">
+            </div>
+            <iframe src="https://www.youtube.com/watch?v=d6kBeJjTGnY" frameborder="0"></iframe>
+        </div>
+        <article>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus esse blanditiis nesciunt delectus rerum aspernatur voluptate eveniet incidunt. Corporis cum veritatis aliquam sunt ipsam inventore rem, suscipit blanditiis aliquid nostrum!</p>
+        </article>
+    </section>
+    <section>
+        <h3>Hunter x Hunter</h3>
+        <div class="foto-video">
+            <div class="foto">
+               <img src="fotos/hunter-x-hunter-2011-5b06b0fe6b483.jpg" alt="">
+            </div>
+            <iframe src="https://www.youtube.com/watch?v=d6kBeJjTGnY" frameborder="0"></iframe>
+        </div>
+        <article>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus esse blanditiis nesciunt delectus rerum aspernatur voluptate eveniet incidunt. Corporis cum veritatis aliquam sunt ipsam inventore rem, suscipit blanditiis aliquid nostrum!</p>
+        </article>
+    </section>
+    <section>
+        <h3>Hunter x Hunter</h3>
+        <div class="foto-video">
+            <div class="foto">
+               <img src="fotos/hunter-x-hunter-2011-5b06b0fe6b483.jpg" alt="">
+            </div>
+            <iframe src="https://www.youtube.com/watch?v=d6kBeJjTGnY" frameborder="0"></iframe>
+        </div>
+        <article>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus esse blanditiis nesciunt delectus rerum aspernatur voluptate eveniet incidunt. Corporis cum veritatis aliquam sunt ipsam inventore rem, suscipit blanditiis aliquid nostrum!</p>
+        </article>
+    </section>
+    <section>
+        <h3>Hunter x Hunter</h3>
+        <div class="foto-video">
+            <div class="foto">
+               <img src="fotos/hunter-x-hunter-2011-5b06b0fe6b483.jpg" alt="">
+            </div>
+            <iframe src="https://www.youtube.com/watch?v=d6kBeJjTGnY" frameborder="0"></iframe>
+        </div>
+        <article>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus esse blanditiis nesciunt delectus rerum aspernatur voluptate eveniet incidunt. Corporis cum veritatis aliquam sunt ipsam inventore rem, suscipit blanditiis aliquid nostrum!</p>
+        </article>
+    </section>
+    <section>
+        <h3>Hunter x Hunter</h3>
+        <div class="foto-video">
+            <div class="foto">
+               <img src="fotos/hunter-x-hunter-2011-5b06b0fe6b483.jpg" alt="">
+            </div>
+            <iframe src="https://www.youtube.com/watch?v=d6kBeJjTGnY" frameborder="0"></iframe>
+        </div>
+        <article>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus esse blanditiis nesciunt delectus rerum aspernatur voluptate eveniet incidunt. Corporis cum veritatis aliquam sunt ipsam inventore rem, suscipit blanditiis aliquid nostrum!</p>
+        </article>
+    </section>
+    <section>
+        <h3>Hunter x Hunter</h3>
+        <div class="foto-video">
+            <div class="foto">
+               <img src="fotos/hunter-x-hunter-2011-5b06b0fe6b483.jpg" alt="">
+            </div>
+            <iframe src="https://www.youtube.com/watch?v=d6kBeJjTGnY" frameborder="0"></iframe>
+        </div>
+        <article>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus esse blanditiis nesciunt delectus rerum aspernatur voluptate eveniet incidunt. Corporis cum veritatis aliquam sunt ipsam inventore rem, suscipit blanditiis aliquid nostrum!</p>
+        </article>
+    </section>
+    <section>
+        <h3>Hunter x Hunter</h3>
+        <div class="foto-video">
+            <div class="foto">
+               <img src="fotos/hunter-x-hunter-2011-5b06b0fe6b483.jpg" alt="">
+            </div>
+            <iframe src="https://www.youtube.com/watch?v=d6kBeJjTGnY" frameborder="0"></iframe>
+        </div>
+        <article>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus esse blanditiis nesciunt delectus rerum aspernatur voluptate eveniet incidunt. Corporis cum veritatis aliquam sunt ipsam inventore rem, suscipit blanditiis aliquid nostrum!</p>
+        </article>
+    </section>
+    <section>
+        <h3>Hunter x Hunter</h3>
+        <div class="foto-video">
+            <div class="foto">
+               <img src="fotos/hunter-x-hunter-2011-5b06b0fe6b483.jpg" alt="">
+            </div>
+            <iframe src="https://www.youtube.com/watch?v=d6kBeJjTGnY" frameborder="0"></iframe>
+        </div>
+        <article>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus esse blanditiis nesciunt delectus rerum aspernatur voluptate eveniet incidunt. Corporis cum veritatis aliquam sunt ipsam inventore rem, suscipit blanditiis aliquid nostrum!</p>
+        </article>
+    </section>
     <footer>
         <div class="footer-container">
             <div class="columna">
@@ -18,11 +153,11 @@
             <div class="columna">
                 <h1>Redes sociales</h1>
                 <a class="redes" href="#">
-                    <img src="/svg/facebook-svgrepo-com.svg" alt="">
+                    <img src="/footer/svg/facebook-svgrepo-com.svg" alt="">
                     <p>Facebook</p>
                 </a>
                 <a class="redes"href="#">
-                    <img src="/svg/instagram-svgrepo-com.svg" alt="">
+                    <img src="/footer/svg/instagram-svgrepo-com.svg" alt="">
                     <p>Instagram</p>
                 </a>
             </div>
@@ -43,7 +178,7 @@
             </div>
         </div>
         <div class="pie">
-            <img src="/svg/copyright-solid-svgrepo-com.svg" alt="">
+            <img src="/footer/svg/copyright-solid-svgrepo-com.svg" alt="">
             <p>Todos los derechos reservados</p>
         </div>
     </footer>
